# GoFish

./: .gitignore  environment.yml  pyproject.toml
config/: DESI_SV_paper.ini
gofish/: gofish.py  ioutils.py  plot_pk.py  tacklebox.py
input_files/: DESI_SV_paper.txt
